LDB - added comment not found errorMsg, fix findChat and findMessageByTextPerFriend, added modified filed to Post.java, fix addPost and updatePost, set email always lowerCase to User.java, refactor updateUser